fix(pricing-columns): missing horizontal margin on mobile

--- a/express/blocks/pricing-columns/pricing-columns.css
+++ b/express/blocks/pricing-columns/pricing-columns.css
@@ -12,6 +12,7 @@ main .pricing-columns {
     flex-wrap: wrap;
     flex-direction: column;
     margin: 80px auto;
+    padding: 0 24px;
 }
 
 main .pricing-columns > div:nth-child(1) { order: 1; }
@@ -140,6 +141,7 @@ main .pricing-columns-content .pricing-iconlist .pricing-iconlist .pricing-iconl
     main .pricing-columns {
         max-width: 600px;
         margin: 0 auto 80px auto;
+        padding: 0;
     }
 
     main .pricing-columns-cta.button {
